option(
  'mastodon_backend',
  type:        'feature',
  value:       'enabled',
  description: 'If to build the backend for Mastodon.'
)

option(
  'twitter_backend',
  type:        'feature',
  value:       'enabled',
  description: 'If to build the backend for Twitter.'
)

option(
option(
  'twitter_oauth1_tokens',
  type:        'array',
  description: 'Key and Secret for a Twitter OAuth 1.0a application.'
)

option(
  'twitter_oauth2_tokens',
  type:        'array',
  description: 'Key and Secret for a Twitter OAuth 2.0 application.'
)
