option(
  'mastodon_backend',
  type:        'feature',
  value:       'enabled',
  description: 'If to build the backend for Mastodon.'
)

option(
  'twitter_backend',
  type:        'feature',
  value:       'enabled',
  description: 'If to build the backend for Twitter.'
)

option(
  'twitter_oauth_key',
  type:        'string',
  description: 'The OAuth 2.0 key to authenticate Cawbird on Twitter.'
)
