i18n.gettext(
  meson.project_name(),
  preset: 'glib',
  args: [
    '--from-code=UTF-8',
    '--add-comments=TRANSLATORS',
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),
    '--msgid-bugs-address=https://github.com/ibboard/cawbird/issues/new',
    '--copyright-holder=2021 Frederick Schenk'
  ]
)
